--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,7 @@ prompt-toolkit==3.0.38
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pydub
 pycparser==2.21
 Pygments==2.14.0
 pyparsing==3.0.9
